src/less/blocks/tag.less
/*
 This file is a part of libertysoil.org website
 Copyright (C) 2015  Loki Education (Social Enterprise)

 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU Affero General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU Affero General Public License for more details.

 You should have received a copy of the GNU Affero General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
*/

.tag {
  height: 23px;
  display: flex;
  flex-direction: row;
  align-items: center;
  
  border-width: 1px;
  border-style: solid;
  color: #000;

  &__name {
    padding-left: 6px;
    padding-right: 10px;
    font-size: 11px;
    line-height: 11px;
  }

  &__icon {
    position: relative;
    padding: 4px;
    width: 22px;
    height: 22px;
    border-width: 1px;
    border-style: solid;
    border-left: none;
    color: white;
    
    &[class*="tag__icon--action"] {
      cursor: pointer;
      &::before {
        &:extend(.micon);
        &:extend(.micon-small);
        
        padding-top: 1px;
        padding-right: 1px;
        position: absolute;
        top: 0;
        left: 0;
        right: 0;
        bottom: 0;
        width: inherit;
        height: inherit;

        display: none;
        border-radius: 50%;

        text-align: center;
      }
    }

    .tag-icon-action(@name, @icon) {
      &--action_@{name} {
        &::before {
          content: ~"'@{icon}'";
        }
      }
    }

    .tag-icon-action(@name: ~"delete", @icon: ~"clear");
    .tag-icon-action(@name: ~"add", @icon: ~"add");
  }

  &:hover {
    [class*="tag__icon--action"] {
      position: relative;
      
      .micon {
        opacity: 0;
      }

      &::before {
        display: block;
      }
    }
  }

  &__badge {
    padding-right: 10px;
    font-size: 11px;
    line-height: 19px;
    color: @color__dark_gray;
  }

  &--round {
    border-radius: 11px;
  }

  .tag-type(@name, @color) {
    &--@{name} {
      border-color: @color;

      .tag__icon {
        border-color: @color;
        background-color: @color;
      }
    }
  }

  .tag-type(@name: ~"hashtag", @color: #689ACA);
  .tag-type(@name: ~"school", @color: #DC3457);
  .tag-type(@name: ~"geotag", @color: #47B8E7);
  .tag-type(@name: ~"event", @color: #98C646);
  .tag-type(@name: ~"mention", @color: #F8A232);
  
  &--theme_minified {
    background-color: #fff;
    border: none;

    .tag__name {
      padding: 0 10px;
    }
  }
}

